--- a/root/login.html
+++ b/root/login.html
@@ -1,34 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
   <title>登录</title>
+  <style>
+    body { font-family: sans-serif; margin: 50px; }
+    form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; width: 300px; background: #fafafa; }
+    input { margin: 8px 0; width: 100%; padding: 5px; box-sizing: border-box; }
+    button { padding: 8px 12px; width: 100%; cursor: pointer; }
+    pre { background: #f5f5f5; padding: 10px; border: 1px solid #ccc; margin-top: 10px; }
+  </style>
 </head>
 <body>
-  <h2>登录</h2>
+  <h2>用户登录</h2>
   <form id="loginForm">
-    用户名: <input type="text" name="username"><br>
-    密码: <input type="password" name="password"><br>
+    <label>用户名:</label>
+    <input type="text" name="username" required>
+    <label>密码:</label>
+    <input type="password" name="password" required>
     <button type="submit">登录</button>
   </form>
 
-  <!-- 用来显示服务器返回的 JSON -->
-  <pre id="result" style="background:#f5f5f5; padding:10px; border:1px solid #ccc;"></pre>
+  <pre id="result"></pre>
 
   <script>
-    document.getElementById("loginForm").addEventListener("submit", async function(e) {
-      e.preventDefault(); // 阻止默认跳转
-      const formData = new FormData(this);
-      const body = new URLSearchParams(formData); // 转换成 x-www-form-urlencoded 格式
+    document.getElementById("loginForm").addEventListener("submit", async function (e) {
+      e.preventDefault();
+
+      const username = document.querySelector('[name="username"]').value.trim();
+      const password = document.querySelector('[name="password"]').value.trim();
+
+      if (!username || !password) {
+        alert("用户名或密码不能为空！");
+        return;
+      }
+
+      const formData = new URLSearchParams();
+      formData.append("username", username);
+      formData.append("password", password);
 
       try {
-        const res = await fetch("/api/login", {
+        const res = await fetch("/api/auth/login", {
           method: "POST",
           headers: { "Content-Type": "application/x-www-form-urlencoded" },
-          body
+          body: formData,
+          credentials: "include" // ✅ 让浏览器保存并携带 cookie
         });
+
         const data = await res.json();
+        localStorage.setItem("sessionId", data.sessionId);
         document.getElementById("result").textContent = JSON.stringify(data, null, 2);
+
+        if (data.status === "ok") {
+          alert("登录成功！");
+          setTimeout(() => {
+            window.location.href = "chat.html";
+          }, 800);
+        } else {
+          alert("登录失败: " + data.msg);
+        }
       } catch (err) {
         document.getElementById("result").textContent = "请求失败: " + err;
       }
